tests/spec/pass/modules/env.aja
import (
    "os"
)

fuc _isDigit(ch: str) -> bool:
    return ch >= "0" and ch <= "9"

fuc _isIntText(text: str) -> bool:
    if length(text) == 0:
        return false

    start = 0
    if text[0:1] == "-":
        if length(text) == 1:
            return false
        start = 1

    for i in range(start, length(text)):
        if not _isDigit(text[i:i+1]):
            return false
    return true

fuc getStr(key: str, fallback: str = "") -> str:
    value = os.getenv(key)
    if value == "":
        return fallback
    return value

fuc require(key: str) -> str:
    value = os.getenv(key)
    if value == "":
        raiseErr("missing env: " + key)
    return value

fuc getInt(key: str, fallback: int = 0) -> int:
    value = os.getenv(key)
    if value == "":
        return fallback
    if _isIntText(value):
        return int(value)
    return fallback

fuc getBool(key: str, fallback: bool = false) -> bool:
    value = os.getenv(key)
    if value == "":
        return fallback

    if value == "1" or value == "true" or value == "TRUE" or value == "yes" or value == "YES" or value == "on" or value == "ON":
        return true
    if value == "0" or value == "false" or value == "FALSE" or value == "no" or value == "NO" or value == "off" or value == "OFF":
        return false
    return fallback

export (
    getStr,
    require,
    getInt,
    getBool
)
